--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,11 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="margin_8">8dp</dimen>
+    <dimen name="margin_small">8dp</dimen>
     <dimen name="tall_toolbar_height">300dp</dimen>
     <dimen name="progress_bar_size">40dp</dimen>
     <dimen name="fragment_messages_min_height">700dp</dimen>
     <dimen name="fragment_photo_min_height">700dp</dimen>
     <dimen name="main_message_margin_top">70dp</dimen>
     <dimen name="main_image_size">100dp</dimen>
+    <dimen name="animation_subtitle_translation_start">10dp</dimen>
 </resources>
