--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -4,8 +4,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/splash_fragment">
 
+    <fragment
+        android:id="@+id/splash_fragment"
+        android:name="com.rocketinsights.android.ui.SplashFragment"
+        tools:layout="@layout/fragment_splash">
+        <action
+            android:id="@+id/show_main_fragment"
+            app:destination="@id/mainFragment"
+            app:popUpTo="@id/splash_fragment"
+            app:popUpToInclusive="true" />
+    </fragment>
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.rocketinsights.android.ui.MainFragment"
